added models to dictionary

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -905,12 +905,12 @@
         "model3.summary()"
       ],
       "metadata": {
-        "id": "6xDGhc6PtRvd",
-        "outputId": "4c7114be-802c-44c6-b5b3-7ef9e5fda6e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
-        }
+        },
+        "id": "6xDGhc6PtRvd",
+        "outputId": "4c7114be-802c-44c6-b5b3-7ef9e5fda6e9"
       },
       "execution_count": 29,
       "outputs": [
@@ -1016,24 +1016,35 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "models = {\n",
-        "    \"Proposed Model\": proposed_model,\n",
-        "    \"Testing Model 1\": testing_model_1,\n",
-        "    \"Testing Model 2\": testing_model_2\n",
-        "}\n",
+        "    \"Model 1\": model1,\n",
+        "    \"Model 2\": model2,\n",
+        "    \"Model 3\": model3\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "SmQaHmfNtijG"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "checkpoint_path = 'best_model.keras'  # Updated to use .keras extension\n",
         "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
