Define the Checkpoint Configuration

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -1038,6 +1038,43 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Define the Checkpoint Configuration\n"
+      ],
+      "metadata": {
+        "id": "yp0ieo5uunaG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the checkpoint directory in Google Drive\n",
+        "checkpoint_dir = '/content/drive/MyDrive/chksAD'\n",
+        "\n",
+        "# Create the directory if it doesn't exist\n",
+        "if not os.path.exists(checkpoint_dir):\n",
+        "    os.makedirs(checkpoint_dir)\n",
+        "\n",
+        "# Define the checkpoint path\n",
+        "checkpoint_path = os.path.join(checkpoint_dir, 'best_model.keras')\n",
+        "\n",
+        "# Set up the ModelCheckpoint callback\n",
+        "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
+        "    filepath=checkpoint_path,\n",
+        "    save_best_only=True,  # Save only the best model\n",
+        "    monitor='val_loss',    # Monitor validation loss\n",
+        "    mode='min',            # Minimize validation loss\n",
+        "    verbose=1              # Print a message when saving the model\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "0FG1lXVKuIbr"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -1055,14 +1092,7 @@
         "\n",
         "\n",
         "\n",
-        "checkpoint_path = 'best_model.keras'  # Updated to use .keras extension\n",
-        "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
-        "    filepath=checkpoint_path,\n",
-        "    save_best_only=True,\n",
-        "    monitor='val_loss',\n",
-        "    mode='min',\n",
-        "    verbose=1\n",
-        ")\n",
+        "\n",
         "\n",
         "def compile_and_train(model, train_generator, val_generator, checkpoint_callback, epochs=100):\n",
         "    model.compile(optimizer=Adam(learning_rate=0.001),\n",
