added plot history

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -1075,6 +1075,60 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Define Compile and Train Functions\n"
+      ],
+      "metadata": {
+        "id": "eTBoCY_vu4iH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compile_and_train(model, train_generator, val_generator, checkpoint_callback, epochs=100):\n",
+        "    model.compile(optimizer=Adam(learning_rate=0.001),\n",
+        "                  loss='categorical_crossentropy',\n",
+        "                  metrics=['accuracy'])\n",
+        "    history = model.fit(train_generator,\n",
+        "                        epochs=epochs,\n",
+        "                        validation_data=val_generator,\n",
+        "                        callbacks=[checkpoint_callback])\n",
+        "    return history"
+      ],
+      "metadata": {
+        "id": "eHTIoyd_uwWA"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_history(name, history):\n",
+        "    fig, axs = plt.subplots(1, 2, figsize=(15, 5))\n",
+        "    fig.suptitle(name)\n",
+        "    axs[0].plot(history.history['loss'], label='Train Loss')\n",
+        "    axs[0].plot(history.history['val_loss'], label='Validation Loss')\n",
+        "    axs[0].set_title('Loss')\n",
+        "    axs[0].set_xlabel('Epochs')\n",
+        "    axs[0].set_ylabel('Loss')\n",
+        "    axs[0].legend()\n",
+        "    axs[1].plot(history.history['accuracy'], label='Train Accuracy')\n",
+        "    axs[1].plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+        "    axs[1].set_title('Accuracy')\n",
+        "    axs[1].set_xlabel('Epochs')\n",
+        "    axs[1].set_ylabel('Accuracy')\n",
+        "    axs[1].legend()\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "KdM37BCqvI5H"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -1094,32 +1148,9 @@
         "\n",
         "\n",
         "\n",
-        "def compile_and_train(model, train_generator, val_generator, checkpoint_callback, epochs=100):\n",
-        "    model.compile(optimizer=Adam(learning_rate=0.001),\n",
-        "                  loss='categorical_crossentropy',\n",
-        "                  metrics=['accuracy'])\n",
-        "    history = model.fit(train_generator,\n",
-        "                        epochs=epochs,\n",
-        "                        validation_data=val_generator,\n",
-        "                        callbacks=[checkpoint_callback])\n",
-        "    return history\n",
         "\n",
-        "def plot_history(name, history):\n",
-        "    fig, axs = plt.subplots(1, 2, figsize=(15, 5))\n",
-        "    fig.suptitle(name)\n",
-        "    axs[0].plot(history.history['loss'], label='Train Loss')\n",
-        "    axs[0].plot(history.history['val_loss'], label='Validation Loss')\n",
-        "    axs[0].set_title('Loss')\n",
-        "    axs[0].set_xlabel('Epochs')\n",
-        "    axs[0].set_ylabel('Loss')\n",
-        "    axs[0].legend()\n",
-        "    axs[1].plot(history.history['accuracy'], label='Train Accuracy')\n",
-        "    axs[1].plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
-        "    axs[1].set_title('Accuracy')\n",
-        "    axs[1].set_xlabel('Epochs')\n",
-        "    axs[1].set_ylabel('Accuracy')\n",
-        "    axs[1].legend()\n",
-        "    plt.show()\n",
+        "\n",
+        "\n",
         "\n",
         "def evaluate_and_plot_confusion_matrix(name, model, generator, y):\n",
         "    test_loss, test_acc = model.evaluate(generator)\n",
