Define Function to Plot Training History

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -1103,6 +1103,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Define Function to Plot Training History\n"
+      ],
+      "metadata": {
+        "id": "Agiy5YXqvYsX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def plot_history(name, history):\n",
