--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -1138,6 +1138,91 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Evaluate and Plot Confusion Matrix"
+      ],
+      "metadata": {
+        "id": "guP6TgNVv82R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def evaluate_and_plot_confusion_matrix(name, model, generator, y, class_names=None, save_plots=False):\n",
+        "    # Evaluate the model\n",
+        "    test_loss, test_acc = model.evaluate(generator)\n",
+        "    print(f\"Test accuracy: {test_acc}\", f\"Test loss: {test_loss}\")\n",
+        "\n",
+        "    # Extract true labels\n",
+        "    Y_true = []\n",
+        "    generator.reset()\n",
+        "    for _ in range((len(y) // batch_size) + 1):\n",
+        "        _, batch_labels = next(generator)\n",
+        "        Y_true.extend(batch_labels)\n",
+        "    Y_true = np.argmax(Y_true, 1)\n",
+        "\n",
+        "    # Generate predictions\n",
+        "    generator.reset()\n",
+        "    Y_pred = model.predict(generator)\n",
+        "    Y_pred_classes = np.argmax(Y_pred, 1)\n",
+        "\n",
+        "    # Plot ROC curve\n",
+        "    fpr, tpr, _ = roc_curve(Y_true, Y_pred[:, 1])\n",
+        "    roc_auc = auc(fpr, tpr)\n",
+        "    plt.figure(figsize=(10, 6))\n",
+        "    plt.plot(fpr, tpr, color='blue', lw=2, label=f'ROC curve (area = {roc_auc:.3f})')\n",
+        "    plt.plot([0, 1], [0, 1], color='gray', lw=1, linestyle='--')\n",
+        "    plt.xlim([0.0, 1.0])\n",
+        "    plt.ylim([0.0, 1.05])\n",
+        "    plt.xlabel('False Positive Rate')\n",
+        "    plt.ylabel('True Positive Rate')\n",
+        "    plt.title(name + ' Receiver Operating Characteristic')\n",
+        "    plt.legend(loc='lower right')\n",
+        "    if save_plots:\n",
+        "        plt.savefig(os.path.join(checkpoint_dir, f'{name}_ROC_Curve.png'))\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Plot confusion matrix\n",
+        "    conf_matrix = confusion_matrix(Y_true, Y_pred_classes)\n",
+        "    plt.figure(figsize=(8, 6))\n",
+        "    plt.imshow(conf_matrix, interpolation='nearest', cmap=plt.cm.Blues)\n",
+        "    plt.title(name + ' Confusion Matrix')\n",
+        "    plt.colorbar()\n",
+        "    tick_marks = np.arange(len(class_names)) if class_names else np.arange(2)\n",
+        "    plt.xticks(tick_marks, class_names if class_names else ['Class 0', 'Class 1'], rotation=45)\n",
+        "    plt.yticks(tick_marks, class_names if class_names else ['Class 0', 'Class 1'])\n",
+        "    thresh = conf_matrix.max() / 2.\n",
+        "    for i, j in itertools.product(range(conf_matrix.shape[0]), range(conf_matrix.shape[1])):\n",
+        "        plt.text(j, i, format(conf_matrix[i, j], 'd'),\n",
+        "                 horizontalalignment=\"center\",\n",
+        "                 color=\"white\" if conf_matrix[i, j] > thresh else \"black\")\n",
+        "    plt.ylabel('True label')\n",
+        "    plt.xlabel('Predicted label')\n",
+        "    plt.tight_layout()\n",
+        "    if save_plots:\n",
+        "        plt.savefig(os.path.join(checkpoint_dir, f'{name}_Confusion_Matrix.png'))\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Compute and print metrics\n",
+        "    accuracy = accuracy_score(Y_true, Y_pred_classes)\n",
+        "    precision = precision_score(Y_true, Y_pred_classes)\n",
+        "    recall = recall_score(Y_true, Y_pred_classes)\n",
+        "    f1 = f1_score(Y_true, Y_pred_classes)\n",
+        "    print(f'Accuracy: {accuracy*100:.2f}')\n",
+        "    print(f'Precision: {precision*100:.2f}')\n",
+        "    print(f'Recall: {recall*100:.2f}')\n",
+        "    print(f'F1 Score: {f1:.3f}')\n",
+        "    print(f'AUC: {roc_auc:.3f}')\n",
+        "    print(f\"Loss: {test_loss:.3f}\")"
+      ],
+      "metadata": {
+        "id": "1jlYWIvlvkIp"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -1161,62 +1246,7 @@
         "\n",
         "\n",
         "\n",
-        "def evaluate_and_plot_confusion_matrix(name, model, generator, y):\n",
-        "    test_loss, test_acc = model.evaluate(generator)\n",
-        "    print(f\"Test accuracy: {test_acc}\", f\"Test loss: {test_loss}\")\n",
         "\n",
-        "    Y_true = []\n",
-        "    test_generator.reset()\n",
-        "    for _ in range((len(y) // batch_size)+1):\n",
-        "        _, batch_labels = next(generator)\n",
-        "        Y_true.extend(batch_labels)\n",
-        "    Y_true = np.argmax(Y_true, 1)\n",
-        "\n",
-        "    generator.reset()\n",
-        "    Y_pred = model.predict(generator)\n",
-        "    Y_pred_classes = np.argmax(Y_pred, 1)\n",
-        "\n",
-        "    fpr, tpr, _ = roc_curve(Y_true, Y_pred[:, 1])\n",
-        "    roc_auc = auc(fpr, tpr)\n",
-        "    plt.figure(figsize=(10, 6))\n",
-        "    plt.plot(fpr, tpr, color='blue', lw=2, label=f'ROC curve (area = {roc_auc:.3f})')\n",
-        "    plt.plot([0, 1], [0, 1], color='gray', lw=1, linestyle='--')\n",
-        "    plt.xlim([0.0, 1.0])\n",
-        "    plt.ylim([0.0, 1.05])\n",
-        "    plt.xlabel('False Positive Rate')\n",
-        "    plt.ylabel('True Positive Rate')\n",
-        "    plt.title(name + ' Receiver Operating Characteristic')\n",
-        "    plt.legend(loc='lower right')\n",
-        "    plt.show()\n",
-        "\n",
-        "    conf_matrix = confusion_matrix(Y_true, Y_pred_classes)\n",
-        "    plt.figure(figsize=(8, 6))\n",
-        "    plt.imshow(conf_matrix, interpolation='nearest', cmap=plt.cm.Blues)\n",
-        "    plt.title(name + ' Confusion Matrix')\n",
-        "    plt.colorbar()\n",
-        "    tick_marks = np.arange(2)\n",
-        "    plt.xticks(tick_marks, ['Class 0', 'Class 1'], rotation=45)\n",
-        "    plt.yticks(tick_marks, ['Class 0', 'Class 1'])\n",
-        "    thresh = conf_matrix.max() / 2.\n",
-        "    for i, j in itertools.product(range(conf_matrix.shape[0]), range(conf_matrix.shape[1])):\n",
-        "        plt.text(j, i, format(conf_matrix[i, j], 'd'),\n",
-        "                 horizontalalignment=\"center\",\n",
-        "                 color=\"white\" if conf_matrix[i, j] > thresh else \"black\")\n",
-        "    plt.ylabel('True label')\n",
-        "    plt.xlabel('Predicted label')\n",
-        "    plt.tight_layout()\n",
-        "    plt.show()\n",
-        "\n",
-        "    accuracy = accuracy_score(Y_true, Y_pred_classes)\n",
-        "    precision = precision_score(Y_true, Y_pred_classes)\n",
-        "    recall = recall_score(Y_true, Y_pred_classes)\n",
-        "    f1 = f1_score(Y_true, Y_pred_classes)\n",
-        "    print(f'Accuracy: {accuracy*100:.2f}')\n",
-        "    print(f'Precision: {precision*100:.2f}')\n",
-        "    print(f'Recall: {recall*100:.2f}')\n",
-        "    print(f'F1 Score: {f1:.3f}')\n",
-        "    print(f'AUC: {roc_auc:.3f}')\n",
-        "    print(f\"Loss: {test_loss:.3f}\")\n",
         "\n",
         "# Training, evaluation, and plotting for each model\n",
         "for model_name, model in models.items():\n",
