--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -2889,11 +2889,11 @@
         "])"
       ],
       "metadata": {
-        "id": "G4hSL4y-z1fW",
-        "outputId": "2feb24ac-4981-4826-ee34-74bb012c7228",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G4hSL4y-z1fW",
+        "outputId": "2feb24ac-4981-4826-ee34-74bb012c7228"
       },
       "execution_count": 38,
       "outputs": [
@@ -2910,9 +2910,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "model_name = 'Proposed Model with DropOut and Glorot Initializer'\n",
+        "model_name = 'Model with DropOut and Glorot Initializer'\n",
         "print(f\"Training {model_name}...\")\n",
         "history = compile_and_train(model, train_generator, val_generator, checkpoint_callback)\n",
         "\n",
@@ -2929,10 +2927,24 @@
         "plot_history(model_name, history)"
       ],
       "metadata": {
-        "id": "ytpW45ktNezt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ytpW45ktNezt",
+        "outputId": "acfa458b-e85b-4779-b3a9-2c6dcb07903d"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Model with DropOut and Glorot Initializer...\n",
+            "Epoch 1/100\n",
+            "\u001b[1m 1/23\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m2:43\u001b[0m 7s/step - accuracy: 0.3281 - loss: 0.7206"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
